--- a/perl6/doc/doc/Language/faq.pod
+++ b/perl6/doc/doc/Language/faq.pod
@@ -97,7 +97,7 @@ is the measure of how complete a Perl 6 implementation is.
 
 =head2 Is there a glossary of Perl 6 related terms?
 
-See L<S99|https://design.perl6.org/S99.html>
+Yes, see L<glossary|https://doc.perl6.org/language/glossary>.
 
 =head2 I'm a Perl 5 programmer. Where is a list of differences between Perl 5 and 6?
 
