--- a/perl6/doc/doc/Language/modules.pod
+++ b/perl6/doc/doc/Language/modules.pod
@@ -420,6 +420,8 @@ To share your module, do the following:
     local repo to know about your GitHub repo.
 
     =item Push your project to GitHub.
+    
+    =item Consider to setup automated testing (see L<https://docs.travis-ci.com/user/languages/perl6>).
 
     =item Create a PR on L<ecosystem|https://github.com/perl6/ecosystem> adding
     your module to META.list, or Ping someone on IRC (#perl6 at freenode) to
@@ -443,6 +445,11 @@ build it there, and install the module into C<~/.perl6>.
 To use C<Vortex::TotalPerspective> from your scripts, just write
 C<use Vortex::TotalPerspective>, and your Perl 6 implementation will
 know where to look for the module file(s).
+
+=head1 Modules and Tools related to module authoring
+
+You can find a list of modules and tools that aim to improve the experience of
+writing/test modules at L<Modules Extra|/language/modules-extra>
 
 =end pod
 
