--- a/perl6/doc/doc/Language/terms.pod
+++ b/perl6/doc/doc/Language/terms.pod
@@ -137,10 +137,17 @@ Returns an L<Int> representing the current time.
 
 Returns a pseudo-random L<Num> in the range C<0..^1>.
 
+=head2 term π
 =head2 term pi
 
-Returns the number C<pi>, i.e. the ratio between circumference and diameter
-of a circle.
+Returns the number C<π>, i.e. the ratio between circumference and diameter
+of a circle. C<pi> is the Texas (ASCII) equivalent of C<π>.
+
+=head2 term τ
+=head2 term tau
+
+Returns the number C<τ>, i.e. the ratio between circumference and radius
+of a circle. C<tau> is the Texas (ASCII) equivalent of C<τ>.
 
 =head2 term e
 
