--- a/perl6/doc/doc/Language/variables.pod
+++ b/perl6/doc/doc/Language/variables.pod
@@ -190,7 +190,7 @@ C<$*dynamic2> is still C<101>. This stems from the fact that we declared a
 new dynamic variable C<$*dynamic1> in the block and did not assign to the
 old variable as we did with C<$*dynamic2>.
 
-The dynamic variables differ from other variable types in that refering
+The dynamic variables differ from other variable types in that referring
 to an undeclared dynamic variable is not a compile time error but a
 runtime L<failure|/type/Failure>, so a dynamic variable can be used
 undeclared as long as it is checked for definedness or used in a
