--- a/perl6/doc/doc/Type/Scalar.pod
+++ b/perl6/doc/doc/Type/Scalar.pod
@@ -25,7 +25,7 @@ There is, however, one important place where C<Scalar>s have a visible
 impact: a C<Scalar> will shield its contents from flattening by most
 Perl 6 core list operations.
 
-A <$>-sigiled variable may be bound directly to a value with no
+A C<$>-sigiled variable may be bound directly to a value with no
 intermediate C<Scalar> using the binding operator C<:=>.  You can
 tell if this has been done by examining the introspective pseudo-method
 C<.VAR>:
@@ -78,7 +78,7 @@ variables.
     c.WHAT.say;              # says "(Int)"
     c.VAR.WHAT.say;          # says "(Int)"
     my $a = 1;
-    my \d = $a;              # just my \d = $ = 1 works, too
+    my \d = $a;              # just "my \d = $ = 1" works, too
     d.WHAT.say;              # says "(Int)"
     d.VAR.WHAT.say;          # says "(Scalar)"
     d = 2;                   # ok
