--- a/perl6/doc/doc/Type/Signature.pod
+++ b/perl6/doc/doc/Type/Signature.pod
@@ -176,8 +176,8 @@ of the routine. Any return statement in that routine has to be argumentless.
 
 	sub foo(--> 123) { return }
 
-L<C<Nil>|/type/Nil> and L<C<Failure>|/type/Failure> are always allowed as return types, reguardless of any
-type contrain.
+L<C<Nil>|/type/Nil> and L<C<Failure>|/type/Failure> are always allowed as return types, regardless of any
+type constraint.
 
 	sub foo(--> Int) { Nil };
 	say foo.perl; # Nil
