--- a/perl6/doc/doc/Type/Supply.pod
+++ b/perl6/doc/doc/Type/Supply.pod
@@ -561,7 +561,7 @@ be called as a class method.
     method zip(Supply @*supplies, :&with = &[,]) returns Supply:D
 
 Creates a supply that emits combined values as soon as there is a new value
-seen on B<all> of the supplies.  By default, C<Lists|/type/List> are
+seen on B<all> of the supplies.  By default, L<Lists|/type/List> are
 created, but this can be changed by specifying your own combiner with the
 :with parameter.  The resulting supply is done as soon as B<any> of the given
 supplies are done.  Can also be called as a class method.
