--- a/ugexe/Perl6-PathTools/README.pod
+++ b/ugexe/Perl6-PathTools/README.pod
@@ -7,6 +7,7 @@
 General purpose file system utility routines
 
 =for HTML <a href="https://travis-ci.org/ugexe/Perl6-PathTools"><img src="https://travis-ci.org/ugexe/Perl6-PathTools.svg?branch=master"></a>
+          <a href="https://ci.appveyor.com/project/ugexe/Perl6-PathTools/branch/master"><img src="https://ci.appveyor.com/api/projects/status/github/ugexe/Perl6-PathTools?branch=master&passingText=Windows%20-%20OK&failingText=Windows%20-%20FAIL&pendingText=Windows%20-%20pending&svg=true"></a>
 
 =head3 Exports
 
