--- a/p6-pdf/perl6-PDF-Tools/Changes
+++ b/p6-pdf/perl6-PDF-Tools/Changes
@@ -1,6 +1,12 @@
+    Release 0.0.5
+    - added reader exception classes, e.g. X::PDF::BadXRef
+    - renamed META.info => META6.json
+
     Release 0.0.4
-    - encryption generation is now supported. RC4 (Encryption revisions 1-4)
+    - encrypted document creation is now supported. RC4 (Encryption revisions 1-4)
       only at this stage. 
+    - [PDF::Writer]
+      -- add extra new-line after each indirect object - readability improvement
 
     Release 0.0.3
     - [PDF::DAO::Util] from-ast() sub now handles cyclical hashes and arrays
