--- a/Tux/CSV/lib/Text/CSV.pod
+++ b/Tux/CSV/lib/Text/CSV.pod
@@ -948,6 +948,92 @@ passing just types will lead to fail later on.
  $csv.column_names(< code name count name >); # will drop the second column
  %hr = $csv.getline_hr($io);
 
+=head2 header
+
+Parse the CSV header and set C<sep> and encoding.
+
+ my @hdr = $csv.header($fh).column-names;
+ $csv.header($fh, sep-set => [ ";", ",", "|", "\t" ]);
+ $csv.header($fh, munge-column-names => "fc");
+
+The first argument should be a file handle.
+
+Assuming that the file opened for parsing has a header, and the header does
+not contain problematic characters like embedded newlines, read the first
+line from the open handle then auto-detect whether the header separates the
+column names with a character from the allowed separator list.
+
+If any of the allowed separators matches, and none of the I<other> allowed
+separators match, set L<C<sep>|/sep> to that separator for the current
+CSV_XS instance and use it to parse the first line, map those to lowercase,
+and use that to set the instance L</column_names>:
+
+ my $csv = Text::CSV.new;
+ my $fh = open "file.csv";
+ $csv.header($fh);
+ while (my $row = $csv.getline_hr($fh)) {
+     ...
+     }
+
+If the header is empty, contains more than one unique separator out of the
+allowed set, contains empty fields, or contains identical fields (after
+folding), it will croak with error 1010, 1011, 1012, or 1013 respectively.
+
+If the header contains embedded newlines or is not valid CSV in any other
+way, this method will throw an exception.
+
+A successful call to C<header> will always set the L<C<sep>|/sep> of the
+C<$csv> object. This behavior can not be disabled.
+
+=head3 return value
+
+On error this method will throw an exception.
+
+On success, this method will return the instance.
+
+=head3 Options
+
+=over 2
+
+=item sep-set
+
+ $csv.header($fh, sep_set => [ ";", ",", "|", "\t" ]);
+
+The list of legal separators defaults to C<[ ";", "," ]> and can be changed
+by this option.
+
+Multi-byte sequences are allowed, both multi-character and Unicode. See
+L<C<sep>|/sep>.
+
+=item munge-column-names
+
+This option offers the means to modify the column names into something that
+is most useful to the application. The default is to map all column names
+to fold case.
+
+ $csv.header($fh, munge-column-names => "lc");
+
+The following values are available:
+
+  fc   - fold case
+  lc   - lower case
+  uc   - upper case
+  none - do not change
+  &cb  - supply a callback
+
+ $csv.header($fh, munge-column-names => { "column_".$col++ });
+
+=item set-column-names
+
+ $csv.header($fh, :set-column-names);
+
+The default is to set the instances column names using L</column_names> if
+the method is successful, so subsequent calls to L</getline_hr> can return
+a hash. Disable setting the header can be forced using a false value for
+this option like C<:!set-column-names>.
+
+=back
+
 =head2 bind_columns
 =head2 bind-columns
 X<bind_columns>
@@ -1759,25 +1845,25 @@ with test.csv like
 
 will return
 
-  { 1   => {
-        code    => 1,
-        color   => 'gray',
-        price   => 850,
-        product => 'pc'
-        },
-    2   => {
-        code    => 2,
-        color   => 'white',
-        price   => 12,
-        product => 'keyboard'
-        },
-    3   => {
-        code    => 3,
-        color   => 'black',
-        price   => 5,
-        product => 'mouse'
-        }
-    }
+ { 1   => {
+       code    => 1,
+       color   => 'gray',
+       price   => 850,
+       product => 'pc'
+       },
+   2   => {
+       code    => 2,
+       color   => 'white',
+       price   => 12,
+       product => 'keyboard'
+       },
+   3   => {
+       code    => 3,
+       color   => 'black',
+       price   => 5,
+       product => 'mouse'
+       }
+   }
 
 =head3 fragment
 X<fragment>
@@ -1896,22 +1982,22 @@ This callback is not active for L</combine>.
 The L</csv> allows for some callbacks that do not integrate in XS internals
 but only feature the L</csv> function.
 
-  csv(in        => "file.csv",
-       callbacks => {
-           after_parse  => sub { say "AFTER PARSE";  }, # first
-           after_in     => sub { say "AFTER IN";     }, # second
-           on_in        => sub { say "ON IN";        }, # third
-           },
-       );
+ csv(in        => "file.csv",
+      callbacks => {
+          after_parse  => sub { say "AFTER PARSE";  }, # first
+          after_in     => sub { say "AFTER IN";     }, # second
+          on_in        => sub { say "ON IN";        }, # third
+          },
+      );
 
-  csv(in        => $aoh,
-       out       => "file.csv",
-       callbacks => {
-           on_in        => sub { say "ON IN";        }, # first
-           before_out   => sub { say "BEFORE OUT";   }, # second
-           before_print => sub { say "BEFORE PRINT"; }, # third
-           },
-       );
+ csv(in        => $aoh,
+      out       => "file.csv",
+      callbacks => {
+          on_in        => sub { say "ON IN";        }, # first
+          before_out   => sub { say "BEFORE OUT";   }, # second
+          before_print => sub { say "BEFORE PRINT"; }, # third
+          },
+      );
 
 =over 2
 
@@ -2298,6 +2384,32 @@ X<1004>
 
 The L<C<callbacks>|/Callbacks> attribute only allows one to be undefined or
 a hash reference.
+
+=item *
+1010 "INI - the header is empty"
+X<1010>
+
+The header line parsed in the L</header> is empty.
+
+=item *
+1011 "INI - the header contains more than one valid separator"
+X<1011>
+
+The header line parsed in the L</header> contains more than one (unique)
+separator character out of the allowed set of separators.
+
+=item *
+1012 "INI - the header contains an empty field"
+X<1012>
+
+The header line parsed in the L</header> is contains an empty field.
+
+=item *
+1013 "INI - the header contains nun-unique fields"
+X<1013>
+
+The header line parsed in the L</header> contains at least two identical
+fields.
 
 =item *
 2010 "ECR - QUO char inside quotes followed by CR not part of EOL"
