--- a/perl6/doc/doc/Language/modules-extra.pod
+++ b/perl6/doc/doc/Language/modules-extra.pod
@@ -15,7 +15,7 @@ of a module.
 
 =item L<App::Mi6|http://modules.perl6.org/dist/App::Mi6>     Minimal authoring tool for Perl6
 =item L<META6|http://modules.perl6.org/dist/META6>        Do things with Perl 6 META files
-=item L<Module::Skeleton|http://modules.perl6.org/dist/Module::Skeleton>        Generate a skeleton module
+=item L<Module::Skeleton|https://bitbucket.org/rightfold/module-skeleton>        Generate a skeleton module
 =item L<p6doc|http://modules.perl6.org/dist/p6doc>        Generate documentation end-products
 
 =head1 Tests
