--- a/perl6/doc/doc/Language/nativecall.pod
+++ b/perl6/doc/doc/Language/nativecall.pod
@@ -167,17 +167,15 @@ Once again, type objects are used to represent nulls.
 C libraries can expose pointers to C functions as return values of functions and as
 members of Structures like e.g. structs and unions.
 
-Example of invoking a function pointer "$fptr" returned by a function "f", using sub "def"
-as definition of the desired function signature and return value:
+Example of invoking a function pointer "$fptr" returned by a function "f", using a
+signature defining the desired function parameters and return value:
 
     sub f() returns Pointer is native('mylib') { * }
-    my $fptr = f();
 
-    sub def() returns int32 is native('mylib') { * }
+    my $fptr    = f();
+    my &newfunc = nativecast(:(Str, size_t --> int32), $fptr);
 
-    my &newfunc = nativecast(&def, $fptr);
-
-    say newfunc();
+    say newfunc("test", 4);
 
 =head1 Arrays
 
